--- a/.env.production
+++ b/.env.production
@@ -8,4 +8,4 @@ VITE_COMPRESS_TYPE=gzip
 VITE_PROD_MOCK=Y
 
 # API
-VITE_GLOB_API_URL='http://118.31.244.108:3333/api'
+VITE_GLOB_API_URL='http://118.31.244.108:3333'
