--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,7 @@ server {
   listen 80;
   server_name localhost;
 
+
   access_log /var/log/nginx/host.access.log  main;
   error_log /var/log/nginx/error.log  error;
 
@@ -9,6 +10,10 @@ server {
     root /usr/share/nginx/html;
     index index.html index.htm;
   }
+
+  add_header Access-Control-Allow-Origin *;
+  add_header Access-Control-Allow-Methods *;
+  add_header Access-Control-Allow-Headers *;
 
   error_page 500 502 503 504 /50x.html;
   location = /50x.html {
