--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@ VITE_APP_TITLE=涡轮台球查询
 VITE_ROUTE_MODE=static
 
 # 根路由重定向地址
-VITE_ROUTE_HOME_PATH='/dashboard/analysis'
+VITE_ROUTE_HOME_PATH='/goods/list'
 
 # el图标作为组件的前缀
 VITE_EL_ICON_PREFIX=el-icon
